Finished view_user page, created show_map(), fixed footer
- Fixed issue where text in footer was misaligned
- Finalized the format for viewing individual user information
- Made the email and residence into links (/map?room=room_num)

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -185,7 +185,7 @@ div.message_body {
     margin-bottom:-10px;
     color: white;
     background-color:#003060;
-    height: 15px;
+    height: 25px;
     font-variant: small-caps;
     font-family:times;
     clear: both;
@@ -262,8 +262,39 @@ table th {
   text-align:right;
 }
 
+#view_user_isabroad {
+  font-size: 9pt;
+  text-align:center;
+  margin-bottom:-15px;
+  margin-top:15px;
+  font-style:italic;
+
+}
+
 #view_user_contact {
   font-size:11pt;
   text-align: center;
   margin-top:20px;
+  margin-bottom:20px;
+  border-style:solid;
+  border-width: 2px 0px 2px 0px;
+  border-color: #003060;
 }
+
+#view_user_other {
+  text-align: left;
+  font-size: 11pt;
+  margin-bottom: 10px;
+
+}
+
+.view_user table {
+  width:100%;
+} 
+
+.view_user th, td {
+  text-align: left;
+  font-size: 11pt;
+  padding:5px;
+}
+
